[gd_scene load_steps=9 format=3 uid="uid://cehkcajloy4j4"]

[ext_resource type="AudioStream" uid="uid://b2o4nhrcmccwi" path="res://assets/audio/explosion_01.wav" id="1_5u7ru"]
[ext_resource type="Script" uid="uid://c0e3x0tsmpa0y" path="res://autoload/audio_helpers.gd" id="1_sow60"]
[ext_resource type="AudioStream" uid="uid://6qaoi12l56f8" path="res://assets/audio/Dancing at the Inn.mp3" id="2_me1qh"]
[ext_resource type="AudioStream" uid="uid://eodb7oc0gqni" path="res://assets/audio/explosion_02.wav" id="2_sow60"]
[ext_resource type="AudioStream" uid="uid://1upfuu65eccd" path="res://assets/audio/explosion_03.wav" id="3_mbwc5"]
[ext_resource type="AudioStream" uid="uid://dcesg2h581ik4" path="res://assets/audio/click.wav" id="5_mbwc5"]
[ext_resource type="AudioStream" uid="uid://b5l6mmit2sb8f" path="res://assets/audio/victory.wav" id="6_6mnr2"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6mnr2"]
streams_count = 3
stream_0/stream = ExtResource("1_5u7ru")
stream_1/stream = ExtResource("2_sow60")
stream_2/stream = ExtResource("3_mbwc5")

[node name="AudioHelpers" type="Node"]
script = ExtResource("1_sow60")

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_me1qh")
volume_db = -5.0
autoplay = true
bus = &"Music"

[node name="ExplosionAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_6mnr2")
max_polyphony = 3
bus = &"SFX"

[node name="ClickAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mbwc5")
volume_db = 2.0
bus = &"SFX"

[node name="VictoryAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6mnr2")
bus = &"SFX"
